--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ header #background-image {
   text-align: center;
   margin-top: 50px;
   position: relative;
+  margin-bottom: 300px;
 }
 
 #servicios .servicio {
