--- a/styles.scss
+++ b/styles.scss
@@ -80,6 +80,7 @@ header {
   text-align: center;
   margin-top: 50px;
   position: relative;
+  margin-bottom: 300px;
 
   .servicio {
     padding: 30px 0;
