--- a/styles.scss
+++ b/styles.scss
@@ -26,6 +26,17 @@ body {
 
 header {
   height: 100vh;
+  width: 100vw;
+  position: relative;
+
+  h1 {
+    position: absolute;
+    top: 50%;
+    right: 20%;
+    color: #333;
+    font-weight: 300;
+    font-size: 64px;
+  }
 
   #background-image {
     width: 100%;
@@ -34,6 +45,7 @@ header {
     z-index: -1;
     opacity: 1;
   }
+
 } // header
 
 #navbar {
@@ -181,7 +193,7 @@ header {
     }
 
     .item {
-      width: 70%;
+      width: 75%;
       align-self: center;
       text-align: center;
       display: flex;
@@ -192,10 +204,14 @@ header {
         font-size: 20px;
         color: rgb(0, 248, 0);
       }
+      
+      span {
+        font-weight: 300;
+      }
 
       p {
         margin-left: 15px;
-        font-weight: 300;
+        font-weight: 200;
         font-size: 18px;
         line-height: 23px;
       }
