--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,11 @@ header {
   position: relative;
 }
 
-header h1 {
+header .kh-png {
   position: absolute;
-  top: 50%;
-  right: 20%;
-  color: #333;
-  font-weight: 300;
-  font-size: 64px;
+  top: 45%;
+  right: 8%;
+  width: 400px;
 }
 
 header #background-image {
