--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,16 @@ body {
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+body h2 {
+  border-radius: 5px;
+  padding: 15px 30px;
+  letter-spacing: 1px;
+  font-size: 45px;
+  font-weight: 300;
+  color: #009bc5;
+  display: inline-block;
+}
+
 header {
   height: 100vh;
   width: 100vw;
@@ -36,7 +46,8 @@ header #background-image {
 
 #navbar {
   z-index: 1;
-  position: fixed;
+  position: relative;
+  width: 100%;
   background-color: rgba(255, 255, 255, 0.7);
 }
 
@@ -59,7 +70,7 @@ header #background-image {
   content: "";
   position: absolute;
   width: 100%;
-  top: 44px;
+  top: 52px;
   border-bottom: 5px solid #009bc5;
   -webkit-animation: borderr 0.4s linear;
           animation: borderr 0.4s linear;
@@ -107,15 +118,12 @@ header #background-image {
   position: relative;
 }
 
-#servicios .servicio {
-  padding: 30px 0;
+#servicios h2 {
+  color: #111;
 }
 
-#servicios h2 {
-  padding: 10px 0;
-  letter-spacing: 1px;
-  font-size: 32px;
-  font-weight: 300;
+#servicios .servicio {
+  padding: 30px 0;
 }
 
 #servicios h5 {
@@ -151,6 +159,34 @@ header #background-image {
 }
 
 #steel-frame .parallax-container {
+  position: relative;
+  overflow: hidden;
+  height: 500px;
+}
+
+#steel-frame .parallax-container .parallax {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+#steel-frame .parallax-container .parallax img {
+  opacity: 0;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+#steel-frame .parallax-container {
   margin: 130px 0;
   height: 250px;
   display: -webkit-box;
@@ -160,7 +196,7 @@ header #background-image {
 
 #steel-frame .parallax-container h2 {
   color: #fff;
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 400;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -186,7 +222,6 @@ header #background-image {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-bottom: 300px;
   border-radius: 6%;
   padding: 30px;
   color: #fff;
@@ -228,5 +263,174 @@ header #background-image {
   font-weight: 200;
   font-size: 18px;
   line-height: 23px;
+}
+
+#galeria {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+#galeria .nuestras-obras {
+  width: 40%;
+  margin: auto;
+  -webkit-clip-path: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
+          clip-path: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
+  padding: 20px 0;
+  background: #00b4db;
+  /* fallback for old browsers */
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-gradient(linear, left top, right top, from(#0083b0), to(#00b4db));
+  background: linear-gradient(to right, #0083b0, #00b4db);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+#galeria h2 {
+  margin: auto;
+  color: #fff;
+}
+
+#galeria .carousel {
+  width: 80%;
+  margin: auto;
+  margin-top: 30px;
+  position: relative;
+}
+
+#galeria .carousel-inner {
+  margin: auto;
+  max-width: 1024px;
+  max-height: 650px;
+}
+
+#galeria .carousel-inner img {
+  width: 1024px;
+  height: 650px;
+}
+
+#galeria .carousel-inner h5 {
+  font-size: 24px;
+  margin: 10px;
+}
+
+#galeria .carousel-caption {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+#contacto {
+  padding: 75px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #00b4db;
+  /* fallback for old browsers */
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-gradient(linear, left top, right top, from(#0083b0), to(#00b4db));
+  background: linear-gradient(to right, #0083b0, #00b4db);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+#contacto h2 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  color: #fff;
+  -webkit-box-flex: 0.6;
+      -ms-flex: 0.6;
+          flex: 0.6;
+}
+
+#contacto #form-container {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+#contacto form {
+  padding: 10px;
+  margin: auto;
+  /* label color */
+  /* label underline focus color */
+  /* valid color */
+  /* icon prefix focus color */
+}
+
+#contacto form .input-field label {
+  color: #ddd;
+}
+
+#contacto form .input-field input[type="email"],
+#contacto form .input-field input[type="text"],
+#contacto form .input-field input[type="tel"],
+#contacto form .input-field textarea {
+  color: #fff !important;
+  border-bottom: 1px solid #ddd;
+}
+
+#contacto form .input-field input[type="email"]:focus,
+#contacto form .input-field input[type="text"]:focus,
+#contacto form .input-field input[type="tel"]:focus,
+#contacto form .input-field textarea:focus {
+  border-bottom: 1.5px solid #27a69a;
+}
+
+#contacto form .input-field .prefix.active {
+  color: #ddd;
+}
+
+#contacto #map {
+  -webkit-box-flex: 0.8;
+      -ms-flex: 0.8;
+          flex: 0.8;
+  margin: 0 50px;
+  border-radius: 20px;
+}
+
+#contacto label {
+  margin: 10px 0;
+}
+
+footer {
+  border-top: 1px solid #ccc;
+  color: #fff;
+  background: #00b4db;
+  /* fallback for old browsers */
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-gradient(linear, left top, right top, from(#0083b0), to(#00b4db));
+  background: linear-gradient(to right, #0083b0, #00b4db);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  padding: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 200;
+  font-size: 18px;
+}
+
+footer .redes-container {
+  font-size: 18px;
+  text-align: center;
+}
+
+footer i {
+  font-size: 26px;
+  margin: 10px;
+}
+
+footer i:hover {
+  color: #22dac7;
+}
+
+footer .bold {
+  font-weight: 300;
+  margin: 10px 0;
 }
 /*# sourceMappingURL=styles.css.map */
