--- a/styles.css
+++ b/styles.css
@@ -451,6 +451,10 @@ footer .sub-text {
   font-weight: 200;
 }
 
+footer .qr {
+  width: 150px;
+}
+
 /* ----------------- MEDIA QUERYS ----------------- */
 @media only screen and (max-width: 1100px) {
   html {
