--- a/styles.scss
+++ b/styles.scss
@@ -272,6 +272,7 @@ header {
 
 #galeria {
   text-align: center;
+  margin-bottom: 200px;
 
   .nuestras-obras {
     width: 40%;
@@ -289,7 +290,67 @@ header {
     font-weight: 400;
   }
 
-  .carousel {
+  .obras {
+    width: 80%;
+    margin: 50px auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .obra {
+    height: 250px;
+    width: 300px;
+    position: relative;
+    margin: 30px 0;
+
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 8px;
+      opacity: 1;
+      filter: brightness(50%);
+    }
+
+    h5 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      letter-spacing: 1px;
+      line-height: 1.5rem;
+    }
+
+    button {
+      position: absolute;
+      bottom: 10%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: transparent;
+      border: 1px solid white;
+      border-radius: 6px;
+      padding: 5px 10px;
+      cursor: pointer;
+      color: white;
+      // box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.4);
+
+      &:hover {
+        background: #fff;
+        color: #111;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+
+      img {
+        filter: brightness(90%);
+      }
+    }
+  }
+
+  /* .carousel {
     width: 1024px;
     height: 650px;
     margin: auto;
@@ -316,7 +377,7 @@ header {
     left: 0;
     width: 100%;
     background-color: $darkTransparent;
-  }
+  } */
 }
 
 #contacto {
@@ -424,6 +485,10 @@ footer {
   .sub-text {
     font-weight: 200;
   }
+
+  .qr {
+    width: 150px;
+  }
 }
 
 /* ----------------- MEDIA QUERYS ----------------- */
@@ -465,6 +530,10 @@ footer {
       }
     }
   }
+}
+
+#obras {
+
 }
 
 @media only screen and (max-width: 1000px) {
