--- a/obras.scss
+++ b/obras.scss
@@ -126,5 +126,11 @@ $lightblueGradient-webkit: -webkit-linear-gradient(
           height: auto;
       }
     }
+
+    .obra-container.angosto {
+    margin: auto;
+    width: 100%;
+  }
+
   }
 }
